fix spacing

--- a/styles/components/details.css
+++ b/styles/components/details.css
@@ -13,6 +13,7 @@
   align-items: center;
   justify-content: center;
   gap: 50px;
+  margin-top: -2px;
   /* margin: 50px 0; */
 }
 
